v35 - New General Articles and small changes

--- a/docs/Green-Your-Lab.css
+++ b/docs/Green-Your-Lab.css
@@ -76,6 +76,12 @@
     margin-right: -389px;
   }
 
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-right: 92px;
+    margin-left: 72px;
+  }
+
   .u-section-1 .u-layout-cell-2 {
     min-height: 548px;
   }
@@ -110,13 +116,13 @@
     font-size: 3.75rem;
     width: auto;
     margin-top: 48px;
-    margin-right: 51px;
-    margin-left: 9px;
+    margin-right: 46px;
+    margin-left: 15px;
   }
 
   .u-section-1 .u-text-2 {
-    width: auto;
     margin-top: 32px;
+    margin-right: 51px;
     margin-left: 20px;
   }
 
@@ -208,7 +214,7 @@
   }
 
   .u-section-1 .u-group-1 {
-    min-height: 253px;
+    min-height: 303px;
     margin-top: -283px;
     width: auto;
     margin-right: initial;
@@ -223,12 +229,11 @@
 
   .u-section-1 .u-text-1 {
     font-size: 3rem;
-    margin-left: 40px;
-    margin-right: 40px;
-    width: 330px;
+    width: 351px;
   }
 
   .u-section-1 .u-text-2 {
+    margin-top: 55px;
     margin-left: 34px;
     margin-right: 34px;
   }
@@ -1308,7 +1313,7 @@
     width: auto;
     margin-top: 92px;
     margin-right: -18px;
-    margin-left: 2px;
+    margin-left: -43px;
   }
 
   .u-section-5 .u-list-1 {
@@ -1351,8 +1356,8 @@
 
   .u-section-5 .u-text-2 {
     margin-top: 94px;
-    margin-left: -17px;
     margin-right: -17px;
+    margin-left: -30px;
   }
 
   .u-section-5 .u-list-1 {
@@ -1457,8 +1462,8 @@
 
   .u-section-5 .u-text-2 {
     margin-top: 77px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-5 .u-list-1 {
