--- a/docs/Green-Lab-Energy.css
+++ b/docs/Green-Lab-Energy.css
@@ -1044,7 +1044,12 @@
 }
 
 .u-section-5 .u-btn-2 {
+  padding: 0;
+}
+
+.u-section-5 .u-btn-3 {
   margin-top: 0;
+  color: rgba(0, 0, 0, 0);
   padding: 0;
 }
 
@@ -1074,8 +1079,6 @@
 
   .u-section-5 .u-text-1 {
     margin-top: 0;
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-5 .u-text-3 {
@@ -1232,8 +1235,8 @@
   }
 
   .u-section-6 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: 44px;
+    margin-right: 44px;
   }
 
   .u-section-6 .u-text-2 {
@@ -1359,8 +1362,8 @@
   }
 
   .u-section-7 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: 44px;
+    margin-right: 44px;
   }
 
   .u-section-7 .u-text-2 {
