--- a/docs/Green-Lab-General.css
+++ b/docs/Green-Lab-General.css
@@ -424,16 +424,16 @@
   padding: 30px 30px 21px;
 }
 
-.u-section-3 .u-shape-1 {
-  width: 145px;
-  height: 99px;
-  margin: -86px auto 0 29px;
-}
-
 .u-section-3 .u-text-1 {
   font-size: 4.5rem;
   font-weight: 700;
-  margin: -43px auto 0;
+  margin: -30px auto 0;
+}
+
+.u-section-3 .u-shape-1 {
+  width: 75px;
+  height: 99px;
+  margin: -135px auto 0 29px;
 }
 
 @media (max-width: 1199px) {
@@ -441,15 +441,15 @@
     padding-top: 0;
   }
 
-  .u-section-3 .u-shape-1 {
-    width: 122px;
-    height: 95px;
-    margin-top: -55px;
-    margin-left: 47px;
+  .u-section-3 .u-text-1 {
+    margin-top: 0;
   }
 
-  .u-section-3 .u-text-1 {
-    margin-top: -40px;
+  .u-section-3 .u-shape-1 {
+    width: 65px;
+    height: 95px;
+    margin-top: -134px;
+    margin-left: 47px;
   }
 }
 
@@ -463,16 +463,15 @@
     min-height: 130px;
   }
 
-  .u-section-3 .u-shape-1 {
-    width: 42px;
-    height: 100px;
-    margin-top: -58px;
-    margin-left: 87px;
-  }
-
   .u-section-3 .u-text-1 {
     width: auto;
-    margin-top: -42px;
+  }
+
+  .u-section-3 .u-shape-1 {
+    width: 30px;
+    height: 100px;
+    margin-top: -137px;
+    margin-left: 40px;
   }
 }
 
@@ -494,15 +493,15 @@
     padding-bottom: 2px;
   }
 
-  .u-section-3 .u-shape-1 {
-    height: 102px;
-    margin-top: -66px;
-    margin-left: 64px;
-  }
-
   .u-section-3 .u-text-1 {
     font-size: 3.75rem;
-    margin-top: -36px;
+  }
+
+  .u-section-3 .u-shape-1 {
+    width: 20px;
+    height: 102px;
+    margin-top: -132px;
+    margin-left: 25px;
   }
 }
 
@@ -523,16 +522,16 @@
     padding-bottom: 30px;
   }
 
+  .u-section-3 .u-text-1 {
+    font-size: 3rem;
+    margin-top: 32px;
+  }
+
   .u-section-3 .u-shape-1 {
     width: 253px;
     height: 17px;
-    margin-top: 67px;
+    margin-top: -17px;
     margin-left: auto;
-  }
-
-  .u-section-3 .u-text-1 {
-    font-size: 3rem;
-    margin-top: -52px;
   }
 }.u-section-4 .u-sheet-1 {
   min-height: 595px;
@@ -602,8 +601,8 @@
   }
 
   .u-section-4 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: 44px;
+    margin-right: 44px;
   }
 
   .u-section-4 .u-text-2 {
@@ -679,7 +678,7 @@
 
 .u-section-5 .u-image-1 {
   height: 423px;
-  object-position: 50% 86.02%;
+  object-position: 50% 78.05%;
   margin: 20px auto 0 0;
 }
 
@@ -714,6 +713,7 @@
 
   .u-section-5 .u-image-1 {
     background-position: 50% 50%;
+    object-position: 50% 27.63%;
     margin-right: initial;
     margin-left: initial;
   }
@@ -740,9 +740,15 @@
     min-height: 762px;
   }
 
+  .u-section-5 .u-image-1 {
+    object-position: 50% 0%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
   .u-section-5 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: 44px;
+    margin-right: 44px;
   }
 
   .u-section-5 .u-text-2 {
@@ -783,6 +789,12 @@
 @media (max-width: 575px) {
   .u-section-5 .u-sheet-1 {
     min-height: 758px;
+  }
+
+  .u-section-5 .u-image-1 {
+    object-position: 38.39% 0%;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-5 .u-group-1 {
@@ -880,8 +892,8 @@
   }
 
   .u-section-6 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: 44px;
+    margin-right: 44px;
   }
 
   .u-section-6 .u-text-2 {
@@ -946,13 +958,15 @@
     margin-bottom: 80px;
   }
 }.u-section-7 .u-sheet-1 {
-  min-height: 605px;
+  min-height: 1361px;
 }
 
 .u-section-7 .u-image-1 {
   height: 423px;
-  object-position: 50% 50.84%;
-  margin: 20px auto 0 0;
+  object-position: 50% 20.19%;
+  margin-top: 20px;
+  margin-bottom: 0;
+  margin-left: 0;
 }
 
 .u-section-7 .u-group-1 {
@@ -986,7 +1000,6 @@
 
   .u-section-7 .u-image-1 {
     background-position: 50% 50%;
-    margin-right: initial;
     margin-left: initial;
   }
 
@@ -1001,10 +1014,6 @@
   .u-section-7 .u-text-1 {
     margin-top: 0;
   }
-
-  .u-section-7 .u-text-2 {
-    margin-bottom: -1367px;
-  }
 }
 
 @media (max-width: 991px) {
@@ -1013,13 +1022,12 @@
   }
 
   .u-section-7 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
+    margin-left: 44px;
+    margin-right: 44px;
   }
 
   .u-section-7 .u-text-2 {
     width: 720px;
-    margin-bottom: -1335px;
   }
 }
 
@@ -1048,7 +1056,6 @@
 
   .u-section-7 .u-text-2 {
     width: 540px;
-    margin-bottom: -1717px;
   }
 }
 
@@ -1070,20 +1077,391 @@
 
   .u-section-7 .u-text-2 {
     width: 340px;
-    margin-bottom: 80px;
   }
 }.u-section-8 .u-sheet-1 {
-  min-height: 100px;
+  min-height: 1745px;
+}
+
+.u-section-8 .u-image-1 {
+  height: 423px;
+  object-position: 50% 78.74%;
+  margin: 20px auto 0 0;
+}
+
+.u-section-8 .u-group-1 {
+  width: 800px;
+  min-height: 149px;
+  margin: -99px 155px 0 auto;
+}
+
+.u-section-8 .u-container-layout-1 {
+  padding: 30px 30px 11px;
 }
 
 .u-section-8 .u-text-1 {
+  font-weight: 700;
+  font-style: normal;
+  width: 573px;
+  margin: -13px auto 0;
+}
+
+.u-section-8 .u-text-2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.6;
+  margin: 20px 0 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 762px;
+  }
+
+  .u-section-8 .u-image-1 {
+    background-position: 50% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-8 .u-group-1 {
+    min-height: 155px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-8 .u-text-1 {
+    margin-top: 0;
+  }
+
+  .u-section-8 .u-text-2 {
+    margin-bottom: 80px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 794px;
+  }
+
+  .u-section-8 .u-text-1 {
+    margin-left: 44px;
+    margin-right: 44px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 828px;
+  }
+
+  .u-section-8 .u-group-1 {
+    min-height: 157px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-8 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-8 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 520px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 758px;
+  }
+
+  .u-section-8 .u-group-1 {
+    min-height: 129px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-8 .u-text-1 {
+    width: 320px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 340px;
+    margin-bottom: 60px;
+  }
+}.u-section-9 .u-sheet-1 {
+  min-height: 605px;
+}
+
+.u-section-9 .u-image-1 {
+  height: 423px;
+  object-position: 50% 100%;
+  margin: 20px auto 0 0;
+}
+
+.u-section-9 .u-group-1 {
+  width: 800px;
+  min-height: 149px;
+  margin: -99px 155px 0 auto;
+}
+
+.u-section-9 .u-container-layout-1 {
+  padding: 30px 30px 11px;
+}
+
+.u-section-9 .u-text-1 {
+  font-weight: 700;
+  font-style: normal;
+  width: 573px;
+  margin: -13px auto 0;
+}
+
+.u-section-9 .u-text-2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.6;
+  margin: 20px 0 80px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 762px;
+  }
+
+  .u-section-9 .u-image-1 {
+    background-position: 50% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-9 .u-group-1 {
+    min-height: 155px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-9 .u-text-1 {
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 794px;
+  }
+
+  .u-section-9 .u-text-1 {
+    margin-left: 44px;
+    margin-right: 44px;
+  }
+
+  .u-section-9 .u-text-2 {
+    width: 720px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 828px;
+  }
+
+  .u-section-9 .u-group-1 {
+    min-height: 157px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-9 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-9 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 520px;
+  }
+
+  .u-section-9 .u-text-2 {
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 758px;
+  }
+
+  .u-section-9 .u-group-1 {
+    min-height: 129px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-9 .u-text-1 {
+    width: 320px;
+  }
+
+  .u-section-9 .u-text-2 {
+    width: 340px;
+  }
+}.u-section-10 .u-sheet-1 {
+  min-height: 605px;
+}
+
+.u-section-10 .u-image-1 {
+  height: 423px;
+  object-position: 50% 50.84%;
+  margin: 20px auto 0 0;
+}
+
+.u-section-10 .u-group-1 {
+  width: 800px;
+  min-height: 149px;
+  margin: -99px 155px 0 auto;
+}
+
+.u-section-10 .u-container-layout-1 {
+  padding: 30px 30px 11px;
+}
+
+.u-section-10 .u-text-1 {
+  font-weight: 700;
+  font-style: normal;
+  width: 573px;
+  margin: -13px auto 0;
+}
+
+.u-section-10 .u-text-2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.6;
+  margin: 20px 0 80px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-10 .u-sheet-1 {
+    min-height: 762px;
+  }
+
+  .u-section-10 .u-image-1 {
+    background-position: 50% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-10 .u-group-1 {
+    min-height: 155px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-10 .u-text-1 {
+    margin-top: 0;
+  }
+
+  .u-section-10 .u-text-2 {
+    margin-bottom: -1367px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-10 .u-sheet-1 {
+    min-height: 794px;
+  }
+
+  .u-section-10 .u-text-1 {
+    margin-left: 44px;
+    margin-right: 44px;
+  }
+
+  .u-section-10 .u-text-2 {
+    width: 720px;
+    margin-bottom: -1335px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-10 .u-sheet-1 {
+    min-height: 828px;
+  }
+
+  .u-section-10 .u-group-1 {
+    min-height: 157px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-10 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-10 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 520px;
+  }
+
+  .u-section-10 .u-text-2 {
+    width: 540px;
+    margin-bottom: -1717px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-10 .u-sheet-1 {
+    min-height: 758px;
+  }
+
+  .u-section-10 .u-group-1 {
+    min-height: 129px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-10 .u-text-1 {
+    width: 320px;
+  }
+
+  .u-section-10 .u-text-2 {
+    width: 340px;
+    margin-bottom: 80px;
+  }
+}.u-section-11 .u-sheet-1 {
+  min-height: 100px;
+}
+
+.u-section-11 .u-text-1 {
   font-size: 1.25rem;
   font-weight: normal;
   margin: 39px 20px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-8 .u-text-1 {
+  .u-section-11 .u-text-1 {
     margin-left: 0;
     margin-right: 0;
   }
