--- a/docs/Highlights-News.css
+++ b/docs/Highlights-News.css
@@ -585,6 +585,10 @@
   padding: 0;
 }
 
+.u-section-4 .u-btn-5 {
+  padding: 0;
+}
+
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
     min-height: 890px;
@@ -607,10 +611,6 @@
   .u-section-4 .u-text-1 {
     margin-top: 0;
   }
-
-  .u-section-4 .u-text-2 {
-    margin-bottom: -1239px;
-  }
 }
 
 @media (max-width: 991px) {
@@ -625,7 +625,6 @@
 
   .u-section-4 .u-text-2 {
     width: 720px;
-    margin-bottom: -1207px;
   }
 }
 
@@ -652,7 +651,6 @@
 
   .u-section-4 .u-text-2 {
     width: 540px;
-    margin-bottom: -1589px;
   }
 }
 
@@ -674,7 +672,6 @@
 
   .u-section-4 .u-text-2 {
     width: 340px;
-    margin-bottom: 80px;
   }
 }.u-section-5 .u-sheet-1 {
   min-height: 605px;
@@ -699,8 +696,7 @@
 .u-section-5 .u-text-1 {
   font-weight: 700;
   font-style: normal;
-  width: 573px;
-  margin: -13px auto 0;
+  margin: -13px 0 0;
 }
 
 .u-section-5 .u-text-2 {
@@ -743,11 +739,6 @@
     min-height: 794px;
   }
 
-  .u-section-5 .u-text-1 {
-    margin-left: -30px;
-    margin-right: -30px;
-  }
-
   .u-section-5 .u-text-2 {
     width: 720px;
     margin-bottom: -1335px;
@@ -772,8 +763,6 @@
   }
 
   .u-section-5 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
     width: 520px;
   }
 
