--- a/docs/Highlights-News.css
+++ b/docs/Highlights-News.css
@@ -50,9 +50,9 @@
 }
 
 .u-section-1 .u-list-1 {
-  width: 126px;
+  width: 194px;
   min-height: 60px;
-  grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+  grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
   grid-template-rows: auto;
   grid-gap: 10px 10px;
   margin: -68px calc(((100% - 1140px) / 2) + -63px) 8px auto;
@@ -73,6 +73,15 @@
 }
 
 .u-section-1 .u-container-layout-5 {
+  padding: 30px;
+}
+
+.u-section-1 .u-image-4 {
+  background-image: url("images/networking.png");
+  background-position: 50% 50%;
+}
+
+.u-section-1 .u-container-layout-6 {
   padding: 30px;
 }
 
@@ -98,6 +107,7 @@
   }
 
   .u-section-1 .u-list-1 {
+    width: 296px;
     height: auto;
     margin-right: calc(((100% - 940px) / 2) + -31px);
   }
@@ -148,6 +158,7 @@
   }
 
   .u-section-1 .u-list-1 {
+    width: 220px;
     margin-right: calc(((100% - 720px) / 2) + -37px);
   }
 }
@@ -195,6 +206,7 @@
   }
 
   .u-section-1 .u-list-1 {
+    min-height: 55px;
     margin-right: calc(((100% - 540px) / 2));
   }
 
@@ -204,6 +216,11 @@
   }
 
   .u-section-1 .u-container-layout-5 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-1 .u-container-layout-6 {
     padding-left: 10px;
     padding-right: 10px;
   }
@@ -247,7 +264,7 @@
 
   .u-section-1 .u-list-1 {
     margin-top: -74px;
-    margin-right: calc(((100% - 340px) / 2));
+    margin-right: auto;
     margin-bottom: 14px;
   }
 }.u-section-2 .u-sheet-1 {
@@ -619,8 +636,8 @@
   }
 
   .u-section-4 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: 44px;
+    margin-right: 44px;
   }
 
   .u-section-4 .u-text-2 {
@@ -646,6 +663,8 @@
   }
 
   .u-section-4 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
     width: 520px;
   }
 
