--- a/docs/Sustainability.css
+++ b/docs/Sustainability.css
@@ -50,9 +50,9 @@
 }
 
 .u-section-1 .u-list-1 {
-  width: 126px;
+  width: 194px;
   min-height: 60px;
-  grid-template-columns: calc(50% - 5px) calc(50% - 5px);
+  grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
   grid-template-rows: auto;
   grid-gap: 10px 10px;
   margin: -68px calc(((100% - 1140px) / 2) + -63px) 8px auto;
@@ -76,9 +76,18 @@
   padding: 30px;
 }
 
+.u-section-1 .u-image-4 {
+  background-image: url("images/networking.png");
+  background-position: 50% 50%;
+}
+
+.u-section-1 .u-container-layout-6 {
+  padding: 30px;
+}
+
 @media (max-width: 1199px) {
   .u-section-1 {
-    min-height: 317px;
+    min-height: 346px;
   }
 
   .u-section-1 .u-image-1 {
@@ -98,6 +107,7 @@
   }
 
   .u-section-1 .u-list-1 {
+    width: 296px;
     height: auto;
     margin-right: calc(((100% - 940px) / 2) + -31px);
   }
@@ -105,7 +115,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 {
-    min-height: 230px;
+    min-height: 272px;
   }
 
   .u-section-1 .u-image-1 {
@@ -148,13 +158,14 @@
   }
 
   .u-section-1 .u-list-1 {
+    width: 220px;
     margin-right: calc(((100% - 720px) / 2) + -37px);
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 {
-    min-height: 861px;
+    min-height: 641px;
   }
 
   .u-section-1 .u-image-1 {
@@ -195,6 +206,7 @@
   }
 
   .u-section-1 .u-list-1 {
+    min-height: 55px;
     margin-right: calc(((100% - 540px) / 2));
   }
 
@@ -207,11 +219,16 @@
     padding-left: 10px;
     padding-right: 10px;
   }
+
+  .u-section-1 .u-container-layout-6 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 {
-    min-height: 523px;
+    min-height: 544px;
   }
 
   .u-section-1 .u-image-1 {
@@ -247,7 +264,7 @@
 
   .u-section-1 .u-list-1 {
     margin-top: -74px;
-    margin-right: calc(((100% - 340px) / 2));
+    margin-right: auto;
     margin-bottom: 14px;
   }
 }.u-section-2 .u-sheet-1 {
