--- a/docs/Green-Lab-Energy.css
+++ b/docs/Green-Lab-Energy.css
@@ -55,7 +55,7 @@
   grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
   grid-template-rows: auto;
   grid-gap: 10px 10px;
-  margin: -68px calc(((100% - 1140px) / 2) + -63px) 8px auto;
+  margin: -70px calc(((100% - 1140px) / 2) + -63px) 10px auto;
 }
 
 .u-section-1 .u-image-2 {
@@ -1317,7 +1317,7 @@
 
 .u-section-7 .u-image-1 {
   height: 423px;
-  object-position: 50% 50.84%;
+  object-position: 50% 64.47%;
   margin: 20px auto 0 0;
 }
 
@@ -1352,6 +1352,7 @@
 
   .u-section-7 .u-image-1 {
     background-position: 50% 50%;
+    object-position: 50% 48.35%;
     margin-right: initial;
     margin-left: initial;
   }
@@ -1367,10 +1368,6 @@
   .u-section-7 .u-text-1 {
     margin-top: 0;
   }
-
-  .u-section-7 .u-text-2 {
-    margin-bottom: -1367px;
-  }
 }
 
 @media (max-width: 991px) {
@@ -1385,7 +1382,6 @@
 
   .u-section-7 .u-text-2 {
     width: 720px;
-    margin-bottom: -1335px;
   }
 }
 
@@ -1414,13 +1410,18 @@
 
   .u-section-7 .u-text-2 {
     width: 540px;
-    margin-bottom: -1717px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-7 .u-sheet-1 {
     min-height: 758px;
+  }
+
+  .u-section-7 .u-image-1 {
+    object-position: 30.38% 48.35%;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-7 .u-group-1 {
@@ -1436,20 +1437,146 @@
 
   .u-section-7 .u-text-2 {
     width: 340px;
-    margin-bottom: 80px;
   }
 }.u-section-8 .u-sheet-1 {
-  min-height: 100px;
+  min-height: 605px;
+}
+
+.u-section-8 .u-image-1 {
+  height: 423px;
+  object-position: 50% 50.84%;
+  margin: 20px auto 0 0;
+}
+
+.u-section-8 .u-group-1 {
+  width: 800px;
+  min-height: 149px;
+  margin: -99px 155px 0 auto;
+}
+
+.u-section-8 .u-container-layout-1 {
+  padding: 30px 30px 11px;
 }
 
 .u-section-8 .u-text-1 {
+  font-weight: 700;
+  font-style: normal;
+  width: 573px;
+  margin: -13px auto 0;
+}
+
+.u-section-8 .u-text-2 {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.6;
+  margin: 20px 0 80px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 762px;
+  }
+
+  .u-section-8 .u-image-1 {
+    background-position: 50% 50%;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-8 .u-group-1 {
+    min-height: 155px;
+    margin-top: 0;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
+  }
+
+  .u-section-8 .u-text-1 {
+    margin-top: 0;
+  }
+
+  .u-section-8 .u-text-2 {
+    margin-bottom: -1367px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 794px;
+  }
+
+  .u-section-8 .u-text-1 {
+    margin-left: 44px;
+    margin-right: 44px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 720px;
+    margin-bottom: -1335px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 828px;
+  }
+
+  .u-section-8 .u-group-1 {
+    min-height: 157px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-8 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-8 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+    width: 520px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 540px;
+    margin-bottom: -1717px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-8 .u-sheet-1 {
+    min-height: 758px;
+  }
+
+  .u-section-8 .u-group-1 {
+    min-height: 129px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-8 .u-text-1 {
+    width: 320px;
+  }
+
+  .u-section-8 .u-text-2 {
+    width: 340px;
+    margin-bottom: 80px;
+  }
+}.u-section-9 .u-sheet-1 {
+  min-height: 100px;
+}
+
+.u-section-9 .u-text-1 {
   font-size: 1.25rem;
   font-weight: normal;
   margin: 39px 20px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-8 .u-text-1 {
+  .u-section-9 .u-text-1 {
     margin-left: 0;
     margin-right: 0;
   }
