--- a/docs/Sustainability-Industry.css
+++ b/docs/Sustainability-Industry.css
@@ -609,8 +609,6 @@
 
   .u-section-4 .u-text-1 {
     margin-top: 0;
-    margin-left: 0;
-    margin-right: 0;
   }
 }
 
@@ -643,8 +641,8 @@
   }
 
   .u-section-4 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: auto;
+    margin-right: auto;
     width: 520px;
   }
 
