--- a/docs/Highlights-News.css
+++ b/docs/Highlights-News.css
@@ -606,6 +606,22 @@
   padding: 0;
 }
 
+.u-section-4 .u-btn-6 {
+  padding: 0;
+}
+
+.u-section-4 .u-btn-7 {
+  padding: 0;
+}
+
+.u-section-4 .u-btn-8 {
+  padding: 0;
+}
+
+.u-section-4 .u-btn-9 {
+  padding: 0;
+}
+
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
     min-height: 890px;
