--- a/docs/Green-Your-Lab.css
+++ b/docs/Green-Your-Lab.css
@@ -839,492 +839,114 @@
 }
 
 .u-section-4 .u-sheet-1 {
-  min-height: 808px;
+  min-height: 588px;
 }
 
-.u-section-4 .u-group-1 {
-  min-height: 101px;
-  width: 800px;
-  margin: 38px auto 0;
+.u-section-4 .u-gallery-1 {
+  height: 886px;
+  grid-gap: 17px 17px;
+  margin: 35px 0 0;
 }
 
-.u-section-4 .u-container-layout-1 {
-  padding-left: 60px;
-  padding-right: 60px;
-  padding-bottom: 0;
+.u-section-4 .u-gallery-inner-1 {
+  grid-template-columns: auto auto auto;
+  grid-gap: 0px 0px;
 }
 
-.u-section-4 .u-text-1 {
-  font-size: 3rem;
-  font-weight: bold;
-  margin: 28px 0 0;
+.u-section-4 .u-over-slide-1 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
 }
 
-.u-section-4 .u-layout-wrap-1 {
-  margin: 16px 0 0 auto;
+.u-section-4 .u-over-slide-2 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
 }
 
-.u-section-4 .u-layout-cell-1 {
-  min-height: 584px;
-  background-image: none;
-}
-
-.u-section-4 .u-container-layout-2 {
-  padding-bottom: 10px;
-}
-
-.u-section-4 .u-image-1 {
-  height: 250px;
-  object-position: 50% 31.22%;
-  margin: 0 auto 0 0;
-}
-
-.u-section-4 .u-text-2 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  width: 129px;
-  margin: 28px auto 0;
-}
-
-.u-section-4 .u-text-3 {
-  font-size: 1rem;
-  margin: 22px 21px 0;
-}
-
-.u-section-4 .u-text-4 {
-  margin: 20px 21px 0;
-}
-
-.u-section-4 .u-layout-cell-2 {
-  min-height: 584px;
-  background-image: none;
-}
-
-.u-section-4 .u-container-layout-3 {
-  padding-bottom: 10px;
-}
-
-.u-section-4 .u-image-2 {
-  height: 250px;
-  margin: 0;
-}
-
-.u-section-4 .u-text-5 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  margin: 28px 28px 0;
-}
-
-.u-section-4 .u-text-6 {
-  font-size: 1rem;
-  margin: 22px 20px 0;
-}
-
-.u-section-4 .u-text-7 {
-  margin: 20px 20px 0;
-}
-
-.u-section-4 .u-layout-cell-3 {
-  min-height: 584px;
-  background-image: none;
-}
-
-.u-section-4 .u-container-layout-4 {
-  padding-bottom: 10px;
-}
-
-.u-section-4 .u-image-3 {
-  height: 250px;
-  margin: 0 auto 0 0;
-}
-
-.u-section-4 .u-text-8 {
-  font-size: 1.5rem;
-  font-weight: 700;
-  width: 232px;
-  margin: 28px auto 0;
-}
-
-.u-section-4 .u-text-9 {
-  margin: 22px 21px 0;
+.u-section-4 .u-over-slide-3 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
 }
 
 .u-section-4 .u-btn-1 {
-  border-style: none;
-  background-image: none;
   font-size: 1.875rem;
-  margin: 20px 0 24px auto;
-  padding: 4px 30px;
+  border-style: none;
+  font-weight: 700;
+  margin: 30px auto 35px;
 }
 
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 891px;
+    min-height: 433px;
   }
 
-  .u-section-4 .u-group-1 {
-    margin-top: 21px;
-  }
-
-  .u-section-4 .u-container-layout-1 {
-    padding-left: 49px;
-    padding-right: 49px;
-  }
-
-  .u-section-4 .u-text-1 {
-    position: relative;
-  }
-
-  .u-section-4 .u-layout-wrap-1 {
-    min-height: 244px;
+  .u-section-4 .u-gallery-1 {
+    height: 731px;
+    grid-template-columns: auto auto auto;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 647px;
-  }
-
-  .u-section-4 .u-image-1 {
-    object-position: 50% 29.6%;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-2 {
-    position: relative;
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-section-4 .u-text-3 {
-    position: relative;
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-section-4 .u-text-4 {
-    margin-top: 18px;
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 647px;
-  }
-
-  .u-section-4 .u-image-2 {
-    object-position: 0% 50%;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-5 {
-    position: relative;
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-section-4 .u-text-6 {
-    position: relative;
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-section-4 .u-text-7 {
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 647px;
-  }
-
-  .u-section-4 .u-image-3 {
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-8 {
-    position: relative;
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-section-4 .u-text-9 {
-    position: relative;
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-
-  .u-section-4 .u-btn-1 {
-    margin-top: 16px;
+  .u-section-4 .u-gallery-inner-1 {
+    grid-template-columns: repeat(3, auto);
   }
 }
 
 @media (max-width: 991px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 1022px;
+    min-height: 1382px;
   }
 
-  .u-section-4 .u-group-1 {
-    min-height: 136px;
-    margin-top: 0;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-4 .u-container-layout-1 {
-    padding-left: 38px;
-    padding-right: 38px;
-  }
-
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 100px;
-  }
-
-  .u-section-4 .u-image-1 {
-    object-position: 50% 53.44%;
+  .u-section-4 .u-gallery-1 {
+    height: 1680px;
+    grid-template-columns: auto auto;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-4 .u-text-2 {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-4 .u-text-3 {
-    margin-left: 13px;
-    margin-right: 13px;
-  }
-
-  .u-section-4 .u-text-4 {
-    margin-left: 13px;
-    margin-right: 13px;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 100px;
-  }
-
-  .u-section-4 .u-image-2 {
-    object-position: 0% 100%;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-5 {
-    margin-left: 13px;
-    margin-right: 13px;
-  }
-
-  .u-section-4 .u-text-6 {
-    margin-top: 20px;
-    margin-left: 13px;
-    margin-right: 13px;
-  }
-
-  .u-section-4 .u-text-7 {
-    margin-top: 22px;
-    margin-left: 13px;
-    margin-right: 13px;
-  }
-
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 100px;
-  }
-
-  .u-section-4 .u-image-3 {
-    object-position: 16.47% 50%;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-8 {
-    width: 217px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-4 .u-text-9 {
-    margin-left: 13px;
-    margin-right: 13px;
-  }
-
-  .u-section-4 .u-btn-1 {
-    margin-top: 28px;
-    margin-bottom: 60px;
-    margin-left: 543px;
+  .u-section-4 .u-gallery-inner-1 {
+    grid-template-columns: repeat(2, auto);
   }
 }
 
 @media (max-width: 767px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 2192px;
+    min-height: 3952px;
   }
 
-  .u-section-4 .u-group-1 {
-    min-height: 106px;
-    width: 474px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-4 .u-container-layout-1 {
-    padding-top: 30px;
-    padding-left: 28px;
-    padding-right: 28px;
-  }
-
-  .u-section-4 .u-layout-wrap-1 {
-    margin-top: 25px;
+  .u-section-4 .u-gallery-1 {
+    height: 3780px;
+    grid-template-columns: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-4 .u-image-1 {
-    height: 400px;
-    object-position: 50% 30.39%;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-3 {
-    margin-left: 9px;
-    margin-right: 9px;
-  }
-
-  .u-section-4 .u-text-4 {
-    width: auto;
-  }
-
-  .u-section-4 .u-image-2 {
-    height: 400px;
-    object-position: 0% 0%;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-5 {
-    margin-left: 9px;
-    margin-right: 9px;
-  }
-
-  .u-section-4 .u-text-6 {
-    margin-left: 9px;
-    margin-right: 9px;
-  }
-
-  .u-section-4 .u-image-3 {
-    height: 400px;
-    object-position: 16.47% 0%;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-8 {
-    width: 242px;
-    margin-top: 27px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-4 .u-text-9 {
-    margin-top: 23px;
-    margin-left: 9px;
-    margin-right: 9px;
+  .u-section-4 .u-gallery-inner-1 {
+    grid-template-columns: repeat(1, auto);
   }
 
   .u-section-4 .u-btn-1 {
-    margin-bottom: 44px;
-    margin-left: auto;
+    border-style: solid;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 1871px;
+    min-height: 2552px;
   }
 
-  .u-section-4 .u-group-1 {
-    width: 340px;
-  }
-
-  .u-section-4 .u-container-layout-1 {
-    padding-left: 18px;
-    padding-right: 18px;
-  }
-
-  .u-section-4 .u-text-1 {
-    font-size: 2.5rem;
-  }
-
-  .u-section-4 .u-image-1 {
-    height: 250px;
+  .u-section-4 .u-gallery-1 {
+    height: 2380px;
     margin-right: initial;
     margin-left: initial;
-  }
-
-  .u-section-4 .u-text-3 {
-    margin-left: 6px;
-    margin-right: 6px;
-  }
-
-  .u-section-4 .u-text-4 {
-    margin-left: 6px;
-    margin-right: 6px;
-  }
-
-  .u-section-4 .u-image-2 {
-    height: 250px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-5 {
-    margin-left: 6px;
-    margin-right: 6px;
-  }
-
-  .u-section-4 .u-text-6 {
-    margin-left: 6px;
-    margin-right: 6px;
-  }
-
-  .u-section-4 .u-text-7 {
-    margin-left: 6px;
-    margin-right: 6px;
-  }
-
-  .u-section-4 .u-image-3 {
-    height: 250px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-text-8 {
-    width: 229px;
-  }
-
-  .u-section-4 .u-text-9 {
-    margin-left: 6px;
-    margin-right: 6px;
-  }
-
-  .u-section-4 .u-btn-1 {
-    margin-top: 20px;
-    margin-bottom: 38px;
   }
 }.u-section-5 {
-  min-height: 363px;
+  min-height: 395px;
 }
 
 .u-section-5 .u-layout-wrap-1 {
   pointer-events: auto;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .u-section-5 .u-image-1 {
@@ -1373,6 +995,11 @@
     min-height: 485px;
   }
 
+  .u-section-5 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
   .u-section-5 .u-image-1 {
     background-position: 29.56% 0%;
     min-height: 485px;
@@ -1403,7 +1030,7 @@
 
 @media (max-width: 991px) {
   .u-section-5 {
-    min-height: 229px;
+    min-height: 261px;
   }
 
   .u-section-5 .u-image-1 {
