--- a/docs/Green-Lab-General.css
+++ b/docs/Green-Lab-General.css
@@ -690,7 +690,7 @@
     margin-bottom: 80px;
   }
 }.u-section-5 .u-sheet-1 {
-  min-height: 605px;
+  min-height: 881px;
 }
 
 .u-section-5 .u-image-1 {
@@ -720,7 +720,11 @@
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.6;
-  margin: 20px 0 80px;
+  margin: 20px 0 60px;
+}
+
+.u-section-5 .u-btn-1 {
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
@@ -748,7 +752,7 @@
   }
 
   .u-section-5 .u-text-2 {
-    margin-bottom: -1399px;
+    margin-bottom: 80px;
   }
 }
 
@@ -770,7 +774,6 @@
 
   .u-section-5 .u-text-2 {
     width: 720px;
-    margin-bottom: -1367px;
   }
 }
 
@@ -799,7 +802,6 @@
 
   .u-section-5 .u-text-2 {
     width: 540px;
-    margin-bottom: -1781px;
   }
 }
 
@@ -827,7 +829,6 @@
 
   .u-section-5 .u-text-2 {
     width: 340px;
-    margin-bottom: 80px;
   }
 }.u-section-6 .u-sheet-1 {
   min-height: 1170px;
