--- a/docs/Green-Lab-Water.css
+++ b/docs/Green-Lab-Water.css
@@ -702,6 +702,7 @@
   font-weight: 400;
   line-height: 1.6;
   background-image: none;
+  font-size: 1rem;
   margin: 20px 0 80px;
 }
 
@@ -786,7 +787,7 @@
     width: 340px;
   }
 }.u-section-6 .u-sheet-1 {
-  min-height: 605px;
+  min-height: 1009px;
 }
 
 .u-section-6 .u-image-1 {
@@ -815,12 +816,12 @@
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.6;
-  margin: 20px 0 80px;
+  margin: 20px 0 60px;
 }
 
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 954px;
+    min-height: 1178px;
   }
 
   .u-section-6 .u-image-1 {
@@ -842,24 +843,24 @@
   }
 
   .u-section-6 .u-text-2 {
-    margin-bottom: -1175px;
+    margin-bottom: -951px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 986px;
+    min-height: 1242px;
   }
 
   .u-section-6 .u-text-2 {
     width: 720px;
-    margin-bottom: -1143px;
+    margin-bottom: -887px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 1020px;
+    min-height: 1405px;
   }
 
   .u-section-6 .u-group-1 {
@@ -880,7 +881,7 @@
 
   .u-section-6 .u-text-2 {
     width: 540px;
-    margin-bottom: -1525px;
+    margin-bottom: -1140px;
   }
 }
 
@@ -902,7 +903,7 @@
 
   .u-section-6 .u-text-2 {
     width: 340px;
-    margin-bottom: 80px;
+    margin-bottom: 60px;
   }
 }.u-section-7 .u-sheet-1 {
   min-height: 605px;
