--- a/docs/Green-Lab-Water.css
+++ b/docs/Green-Lab-Water.css
@@ -792,8 +792,10 @@
 
 .u-section-6 .u-image-1 {
   height: 423px;
-  object-position: 50% 86.02%;
-  margin: 20px auto 0 0;
+  object-position: 50% 0%;
+  margin-top: 20px;
+  margin-bottom: 0;
+  margin-left: 0;
 }
 
 .u-section-6 .u-group-1 {
@@ -826,7 +828,6 @@
 
   .u-section-6 .u-image-1 {
     background-position: 50% 50%;
-    margin-right: initial;
     margin-left: initial;
   }
 
