--- a/docs/Highlights-News.css
+++ b/docs/Highlights-News.css
@@ -1,4 +1,4 @@
-.u-section-1 {
+ .u-section-1 {
   min-height: 378px;
 }
 
@@ -51,11 +51,14 @@
 
 .u-section-1 .u-list-1 {
   width: 194px;
-  min-height: 60px;
-  grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
   grid-template-rows: auto;
-  grid-gap: 10px 10px;
   margin: -70px calc(((100% - 1140px) / 2) + -63px) 10px auto;
+}
+
+.u-section-1 .u-repeater-1 {
+  grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
+  grid-gap: 10px 10px;
+  min-height: 60px;
 }
 
 .u-section-1 .u-image-2 {
@@ -86,7 +89,7 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 {
+   .u-section-1 {
     min-height: 346px;
   }
 
@@ -114,7 +117,7 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-1 {
+   .u-section-1 {
     min-height: 272px;
   }
 
@@ -164,7 +167,7 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-1 {
+   .u-section-1 {
     min-height: 641px;
   }
 
@@ -206,7 +209,6 @@
   }
 
   .u-section-1 .u-list-1 {
-    min-height: 55px;
     margin-right: calc(((100% - 540px) / 2));
   }
 
@@ -227,7 +229,7 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-1 {
+   .u-section-1 {
     min-height: 544px;
   }
 
@@ -591,15 +593,16 @@
 }
 
 .u-section-4 .u-btn-2 {
+  background-image: none;
   padding: 0;
 }
 
 .u-section-4 .u-btn-3 {
-  margin-top: 0;
   padding: 0;
 }
 
 .u-section-4 .u-btn-4 {
+  margin-top: 0;
   padding: 0;
 }
 
@@ -608,11 +611,11 @@
 }
 
 .u-section-4 .u-btn-6 {
-  margin-top: 0;
   padding: 0;
 }
 
 .u-section-4 .u-btn-7 {
+  margin-top: 0;
   padding: 0;
 }
 
@@ -621,6 +624,10 @@
 }
 
 .u-section-4 .u-btn-9 {
+  padding: 0;
+}
+
+.u-section-4 .u-btn-10 {
   padding: 0;
 }
 
