--- a/docs/Sustainability-Environment.css
+++ b/docs/Sustainability-Environment.css
@@ -1,4 +1,4 @@
-.u-section-1 {
+ .u-section-1 {
   min-height: 378px;
 }
 
@@ -86,7 +86,7 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 {
+   .u-section-1 {
     min-height: 346px;
   }
 
@@ -114,7 +114,7 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-1 {
+   .u-section-1 {
     min-height: 272px;
   }
 
@@ -164,7 +164,7 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-1 {
+   .u-section-1 {
     min-height: 641px;
   }
 
@@ -227,7 +227,7 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-1 {
+   .u-section-1 {
     min-height: 544px;
   }
 
@@ -859,6 +859,10 @@
   margin: 326px auto 60px;
 }
 
+.u-section-6 .embed-responsive-1 {
+  position: absolute;
+}
+
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
     min-height: 1003px;
@@ -1029,6 +1033,10 @@
   width: 456px;
   height: 68px;
   margin: 263px auto 60px 342px;
+}
+
+.u-section-7 .embed-responsive-1 {
+  position: absolute;
 }
 
 @media (max-width: 1199px) {
