--- a/docs/Sustainability.css
+++ b/docs/Sustainability.css
@@ -1,4 +1,4 @@
-.u-section-1 {
+ .u-section-1 {
   min-height: 378px;
 }
 
@@ -51,11 +51,14 @@
 
 .u-section-1 .u-list-1 {
   width: 194px;
-  min-height: 60px;
-  grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
   grid-template-rows: auto;
-  grid-gap: 10px 10px;
   margin: -70px calc(((100% - 1140px) / 2) + -63px) 10px auto;
+}
+
+.u-section-1 .u-repeater-1 {
+  grid-template-columns: calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px) calc(33.3333% - 6.66667px);
+  grid-gap: 10px 10px;
+  min-height: 60px;
 }
 
 .u-section-1 .u-image-2 {
@@ -86,7 +89,7 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 {
+   .u-section-1 {
     min-height: 346px;
   }
 
@@ -114,7 +117,7 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-1 {
+   .u-section-1 {
     min-height: 272px;
   }
 
@@ -164,7 +167,7 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-1 {
+   .u-section-1 {
     min-height: 641px;
   }
 
@@ -206,7 +209,6 @@
   }
 
   .u-section-1 .u-list-1 {
-    min-height: 55px;
     margin-right: calc(((100% - 540px) / 2));
   }
 
@@ -227,7 +229,7 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-1 {
+   .u-section-1 {
     min-height: 544px;
   }
 
@@ -429,7 +431,7 @@
     padding-right: 52px;
     padding-left: 51px;
   }
-}.u-section-3 {
+} .u-section-3 {
   background-image: none;
 }
 
@@ -473,19 +475,12 @@
 }
 
 .u-section-3 .u-container-layout-1 {
-  padding: 30px 30px 30px 50px;
-}
-
-.u-section-3 .u-icon-1 {
-  height: 140px;
-  width: 140px;
-  background-image: none;
-  margin: 70px auto 0 0;
+  padding: 30px 4px;
 }
 
 .u-section-3 .u-text-1 {
   line-height: 2.2;
-  margin: -209px -20px 0 190px;
+  margin: 0 0 0 222px;
 }
 
 .u-section-3 .u-btn-1 {
@@ -494,6 +489,7 @@
 }
 
 .u-section-3 .u-btn-2 {
+  background-image: none;
   padding: 0;
 }
 
@@ -503,6 +499,17 @@
 
 .u-section-3 .u-btn-4 {
   padding: 0;
+}
+
+.u-section-3 .u-btn-5 {
+  padding: 0;
+}
+
+.u-section-3 .u-icon-1 {
+  height: 140px;
+  width: 140px;
+  background-image: none;
+  margin: -105px auto 0 26px;
 }
 
 .u-section-3 .u-tab-pane-2 {
@@ -527,10 +534,6 @@
   margin: -209px -20px 0 190px;
 }
 
-.u-section-3 .u-btn-5 {
-  padding: 0;
-}
-
 .u-section-3 .u-btn-6 {
   padding: 0;
 }
@@ -547,6 +550,10 @@
   padding: 0;
 }
 
+.u-section-3 .u-btn-10 {
+  padding: 0;
+}
+
 @media (max-width: 1199px) {
   .u-section-3 .u-tabs-1 {
     height: auto;
@@ -558,8 +565,11 @@
   .u-section-3 .u-text-1 {
     width: auto;
     height: 350px;
-    margin-right: 0;
     margin-left: 162px;
+  }
+
+  .u-section-3 .u-icon-1 {
+    margin-top: -280px;
   }
 
   .u-section-3 .u-text-2 {
@@ -571,17 +581,13 @@
 }
 
 @media (max-width: 991px) {
-  .u-section-3 .u-container-layout-1 {
-    padding-left: 30px;
+  .u-section-3 .u-text-1 {
+    margin-top: 1px;
+    margin-left: 170px;
   }
 
   .u-section-3 .u-icon-1 {
-    margin-top: 88px;
-  }
-
-  .u-section-3 .u-text-1 {
-    margin-top: -227px;
-    margin-left: 170px;
+    margin-top: -263px;
   }
 
   .u-section-3 .u-container-layout-2 {
@@ -610,11 +616,6 @@
     margin-left: initial;
   }
 
-  .u-section-3 .u-container-layout-1 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
   .u-section-3 .u-text-1 {
     margin-left: 150px;
   }
@@ -636,14 +637,14 @@
     margin-left: initial;
   }
 
-  .u-section-3 .u-icon-1 {
-    margin-top: 20px;
-    margin-left: auto;
+  .u-section-3 .u-text-1 {
+    margin-top: 180px;
+    margin-left: 0;
   }
 
-  .u-section-3 .u-text-1 {
-    margin-top: 20px;
-    margin-left: 0;
+  .u-section-3 .u-icon-1 {
+    margin-top: -510px;
+    margin-left: auto;
   }
 
   .u-section-3 .u-icon-2 {
