--- a/docs/Green-Lab-Other.css
+++ b/docs/Green-Lab-Other.css
@@ -12,7 +12,7 @@
 .u-section-1 .u-image-1 {
   min-height: 378px;
   pointer-events: auto;
-  background-image: url("images/GreenYourLab.jpg");
+  background-image: url("images/GreenYourLab-68.jpg");
   background-position: 50% 50%;
 }
 
