--- a/docs/Highlights-News.css
+++ b/docs/Highlights-News.css
@@ -12,7 +12,7 @@
 .u-section-1 .u-image-1 {
   min-height: 378px;
   pointer-events: auto;
-  background-image: url("images/GreenYourLab.jpg");
+  background-image: url("images/GreenYourLab-54.jpg");
   background-position: 50% 50%;
 }
 
@@ -555,7 +555,7 @@
     margin-right: auto;
   }
 }.u-section-4 .u-sheet-1 {
-  min-height: 2129px;
+  min-height: 1697px;
 }
 
 .u-section-4 .u-image-1 {
@@ -587,9 +587,10 @@
 
 .u-section-4 .u-text-2 {
   font-size: 1.25rem;
-  font-weight: 400;
   line-height: 1.6;
-  margin: 20px 0 60px;
+  background-image: none;
+  font-weight: normal;
+  margin: 20px 0 0;
 }
 
 .u-section-4 .u-btn-2 {
@@ -598,36 +599,22 @@
 }
 
 .u-section-4 .u-btn-3 {
+  background-image: none;
   padding: 0;
 }
 
 .u-section-4 .u-btn-4 {
-  margin-top: 0;
+  background-image: none;
   padding: 0;
 }
 
 .u-section-4 .u-btn-5 {
+  background-image: none;
   padding: 0;
 }
 
 .u-section-4 .u-btn-6 {
-  padding: 0;
-}
-
-.u-section-4 .u-btn-7 {
-  margin-top: 0;
-  padding: 0;
-}
-
-.u-section-4 .u-btn-8 {
-  padding: 0;
-}
-
-.u-section-4 .u-btn-9 {
-  padding: 0;
-}
-
-.u-section-4 .u-btn-10 {
+  background-image: none;
   padding: 0;
 }
 
@@ -718,32 +705,143 @@
     width: 340px;
   }
 }.u-section-5 .u-sheet-1 {
+  min-height: 360px;
+}
+
+.u-section-5 .u-video-1 {
+  height: 360px;
+  width: 640px;
+  margin: 0 auto;
+}
+
+.u-section-5 .embed-responsive-1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
+@media (max-width: 767px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 304px;
+  }
+
+  .u-section-5 .u-video-1 {
+    height: 304px;
+    width: 540px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-5 .u-sheet-1 {
+    min-height: 191px;
+  }
+
+  .u-section-5 .u-video-1 {
+    height: 191px;
+    width: 340px;
+  }
+}.u-section-6 .u-sheet-1 {
+  min-height: 2559px;
+}
+
+.u-section-6 .u-text-1 {
+  font-size: 1.25rem;
+  line-height: 1.6;
+  background-image: none;
+  font-weight: normal;
+  margin: 47px 0 60px;
+}
+
+.u-section-6 .u-btn-1 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-2 {
+  margin-top: 0;
+  padding: 0;
+}
+
+.u-section-6 .u-btn-3 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-4 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-5 {
+  margin-top: 0;
+  padding: 0;
+}
+
+.u-section-6 .u-btn-6 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-7 {
+  padding: 0;
+}
+
+.u-section-6 .u-btn-8 {
+  padding: 0;
+}
+
+@media (max-width: 1199px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 2659px;
+  }
+
+  .u-section-6 .u-text-1 {
+    width: auto;
+    margin-top: 51px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 2979px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 3491px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-6 .u-sheet-1 {
+    min-height: 4591px;
+  }
+}.u-section-7 .u-sheet-1 {
   min-height: 605px;
 }
 
-.u-section-5 .u-image-1 {
+.u-section-7 .u-image-1 {
   height: 423px;
   object-position: 50% 50.84%;
   margin: 20px auto 0 0;
 }
 
-.u-section-5 .u-group-1 {
+.u-section-7 .u-group-1 {
   width: 800px;
   min-height: 149px;
   margin: -99px 155px 0 auto;
 }
 
-.u-section-5 .u-container-layout-1 {
+.u-section-7 .u-container-layout-1 {
   padding: 30px 30px 11px;
 }
 
-.u-section-5 .u-text-1 {
+.u-section-7 .u-text-1 {
   font-weight: 700;
   font-style: normal;
   margin: -13px 0 0;
 }
 
-.u-section-5 .u-text-2 {
+.u-section-7 .u-text-2 {
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.6;
@@ -751,17 +849,17 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-5 .u-sheet-1 {
+  .u-section-7 .u-sheet-1 {
     min-height: 762px;
   }
 
-  .u-section-5 .u-image-1 {
+  .u-section-7 .u-image-1 {
     background-position: 50% 50%;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-5 .u-group-1 {
+  .u-section-7 .u-group-1 {
     min-height: 155px;
     margin-top: 0;
     margin-right: initial;
@@ -769,86 +867,71 @@
     width: auto;
   }
 
-  .u-section-5 .u-text-1 {
+  .u-section-7 .u-text-1 {
     margin-top: 0;
   }
 
-  .u-section-5 .u-text-2 {
+  .u-section-7 .u-text-2 {
     margin-bottom: -1367px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-5 .u-sheet-1 {
+  .u-section-7 .u-sheet-1 {
     min-height: 794px;
   }
 
-  .u-section-5 .u-text-2 {
+  .u-section-7 .u-text-2 {
     width: 720px;
     margin-bottom: -1335px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-5 .u-sheet-1 {
+  .u-section-7 .u-sheet-1 {
     min-height: 828px;
   }
 
-  .u-section-5 .u-group-1 {
+  .u-section-7 .u-group-1 {
     min-height: 157px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-5 .u-container-layout-1 {
+  .u-section-7 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
 
-  .u-section-5 .u-text-1 {
+  .u-section-7 .u-text-1 {
     width: 520px;
   }
 
-  .u-section-5 .u-text-2 {
+  .u-section-7 .u-text-2 {
     width: 540px;
     margin-bottom: -1717px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-5 .u-sheet-1 {
+  .u-section-7 .u-sheet-1 {
     min-height: 758px;
   }
 
-  .u-section-5 .u-group-1 {
+  .u-section-7 .u-group-1 {
     min-height: 129px;
     width: auto;
     margin-right: initial;
     margin-left: initial;
   }
 
-  .u-section-5 .u-text-1 {
+  .u-section-7 .u-text-1 {
     width: 320px;
   }
 
-  .u-section-5 .u-text-2 {
+  .u-section-7 .u-text-2 {
     width: 340px;
     margin-bottom: 80px;
-  }
-}.u-section-6 .u-sheet-1 {
-  min-height: 100px;
-}
-
-.u-section-6 .u-text-1 {
-  font-size: 1.25rem;
-  font-weight: normal;
-  margin: 39px 20px;
-}
-
-@media (max-width: 1199px) {
-  .u-section-6 .u-text-1 {
-    margin-left: 0;
-    margin-right: 0;
   }
 }
